--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,7 +21,6 @@
     <div class="col-md-10 col-12 mx-auto">
       <div class="card-columns">
         {{#each restaurants}}
-        <a href="/restaurants/{{ this.id }}" class="text-secondary">
           <div class="card mb-3">
             <img class="card-img-top" src="{{ this.image }}" alt="{{ this.name }}">
             <div class="card-body p-3">
@@ -35,10 +34,15 @@
                 {{ this.rating }}
                 <i class="fas fa-star fa-xs"></i>
               </span>
-
+            </div>
+            <div class="card-footer">
+              <a href="/restaurants/{{ this.id }}/edit" class="btn btn-success">編輯餐廳</a>
+              <a href="/restaurants/{{ this.id }}" class="btn btn-secondary">餐廳資訊</a>
+              <form action="/restaurants/{{ this.id }}" method="POST" style="display: inline;">
+                <button type="submit" class="btn btn-danger">刪除</button>
+              </form>
             </div>
           </div>
-        </a>
         {{/each}}
       </div>
     </div>
