Update restaurant action

--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -4,47 +4,47 @@
   <div class="container">
       <div class="form-row">
         <div class="form-group col-md-6">
-          <label for="name">餐廳中文名</label>
+          <label for="name"><i class="fas fa-utensils mr-1"></i>餐廳中文名</label>
           <input type="text" name="name" class="form-control" value="布娜飛比利時啤酒餐廳" required>
         </div>
         <div class="form-group col-md-6">
-          <label for="name_en">餐廳英文名</label>
+          <label for="name_en"><i class="fas fa-utensils mr-1"></i>餐廳英文名</label>
           <input type="text" name="name_en" class="form-control" value="Bravo Beer" required>
         </div>
       </div>
 
       <div class="form-row">
         <div class="form-group col-md-5">
-          <label for="category">餐廳類別</label>
+          <label for="category"><i class="fas fa-archive mr-1"></i>餐廳類別</label>
           <input type="text" name="category" class="form-control" value="義式餐廳" required>
         </div>
         <div class="form-group col-md-5">
-          <label for="phone">餐廳電話</label>
+          <label for="phone"><i class="fas fa-mobile-alt mr-1"></i>餐廳電話</label>
           <input type="text" name="phone" class="form-control" value="02 2570 1255" required>
         </div>
         <div class="form-group col-md-2">
-          <label for="rating">餐廳評分</label>
+          <label for="rating"><i class="fas fa-star mr-1"></i>餐廳評分</label>
           <input type="number" placeholder="1~5分" name="rating" class="form-control" step="0.1" min="1" max="5" value="4.7" required>
         </div>
       </div>
 
       <div class="form-group">
-        <label for="location">餐廳地址</label>
+        <label for="location"><i class="fas fa-map-marker-alt mr-1"></i>餐廳地址</label>
         <input type="text" name="location" class="form-control" value="台北市松山區市民大道四段 185 號" required>
       </div>
 
       <div class="form-group">
-        <label for="google_map">Google餐廳位置</label>
+        <label for="google_map"><i class="fas fa-map mr-1"></i>Google餐廳位置</label>
         <input type="url" name="google_map" class="form-control" placeholder="請輸入Google餐廳位置" value="https://goo.gl/maps/V9mKwVJ4s5v" required>
       </div>
 
       <div class="form-group">
-        <label for="description">餐廳介紹</label>
-        <textarea type="text" placeholder="請介紹此餐廳特色" name="description" class="form-control" value="我們希望帶給您的，不只是啤酒，有美食，還有一份對生活的熱情。 義大利語「Bravo」的原意─「喝采」、「讚揚」， 我想著如果有一個大家都能輕鬆品嚐美酒、享受美食的地方，那就真的是太棒了！ 因為這個念頭，加上一股對比利時啤酒的熱情， 於是「Bravo Beer布娜飛比利時啤酒餐廳」在2006年誕生了..." required>我們希望帶給您的，不只是啤酒，有美食，還有一份對生活的熱情。 義大利語「Bravo」的原意─「喝采」、「讚揚」， 我想著如果有一個大家都能輕鬆品嚐美酒、享受美食的地方，那就真的是太棒了！ 因為這個念頭，加上一股對比利時啤酒的熱情， 於是「Bravo Beer布娜飛比利時啤酒餐廳」在2006年誕生了...</textarea>
+        <label for="description"><i class="fas fa-sticky-note mr-1"></i>餐廳介紹</label>
+        <textarea type="text" placeholder="請介紹此餐廳特色" name="description" class="form-control" rows="4" required>我們希望帶給您的，不只是啤酒，有美食，還有一份對生活的熱情。 義大利語「Bravo」的原意─「喝采」、「讚揚」， 我想著如果有一個大家都能輕鬆品嚐美酒、享受美食的地方，那就真的是太棒了！ 因為這個念頭，加上一股對比利時啤酒的熱情， 於是「Bravo Beer布娜飛比利時啤酒餐廳」在2006年誕生了...</textarea>
       </div>
 
       <div class="form-group">
-        <label for="image">餐廳圖片</label>
+        <label for="image"><i class="fas fa-image mr-1"></i>餐廳圖片</label>
         <input type="url" name="image" class="form-control" placeholder="餐廳圖片網址" value="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5634/08.jpg" required>
       </div>
 
