--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,27 +22,47 @@
       <div class="card-columns">
         {{#each restaurants}}
           <div class="card mb-3">
-            <img class="card-img-top" src="{{ this.image }}" alt="{{ this.name }}">
+            <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
             <div class="card-body p-3">
-              <h6 class="card-title mb-1">{{ this.name }}</h6>
+              <h6 class="card-title mb-1">{{this.name}}</h6>
 
               <div class="restaurant-category mb-1">
-                <i class="fas fa-utensils pr-2"></i> {{ this.category }}
+                <i class="fas fa-utensils pr-2"></i> {{this.category}}
               </div>
 
               <span class="badge badge-pill badge-danger font-weight-normal">
-                {{ this.rating }}
+                {{this.rating}}
                 <i class="fas fa-star fa-xs"></i>
               </span>
             </div>
             <div class="card-footer">
-              <a href="/restaurants/{{ this.id }}/edit" class="btn btn-success">編輯餐廳</a>
-              <a href="/restaurants/{{ this.id }}" class="btn btn-secondary">餐廳資訊</a>
-              <form action="/restaurants/{{ this.id }}" method="POST" style="display: inline;">
-                <button type="submit" class="btn btn-danger">刪除</button>
-              </form>
+              <a href="/restaurants/{{this.id}}/edit" class="btn btn-success">編輯餐廳</a>
+              <a href="/restaurants/{{this.id}}" class="btn btn-secondary">餐廳資訊</a>
+              <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal{{this.id}}">刪除</button>
             </div>
           </div>
+
+          <!-- Modal -->
+          <form action="/restaurants/{{this.id}}" method="POST" style="display: inline;">
+            <div class="modal fade" id="modal{{this.id}}" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    確認要刪除<span class="text-info">{{this.name}}</span>?
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                    <button type="submit"" class="btn btn-primary">確認</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </form>
         {{/each}}
       </div>
     </div>
