--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
       <form action="/search">
         <h4 class="mb-2">尋找餐廳：</h4>
         <div class="input-group">
-          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..." value="{{ keyword }}" aria-describedby="search-button">
+          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..." value="{{keyword}}" aria-describedby="search-button">
           <div class="input-group-append">
             <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
           </div>
@@ -40,29 +40,29 @@
               <a href="/restaurants/{{this.id}}" class="btn btn-secondary">餐廳資訊</a>
               <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal{{this.id}}">刪除</button>
             </div>
-          </div>
 
-          <!-- Modal -->
-          <form action="/restaurants/{{this.id}}" method="POST" style="display: inline;">
-            <div class="modal fade" id="modal{{this.id}}" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-                    確認要刪除<span class="text-info">{{this.name}}</span>?
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                    <button type="submit"" class="btn btn-primary">確認</button>
+            <!-- Modal -->
+            <form action="/restaurants/{{this.id}}/delete" method="POST">
+              <div class="modal fade" id="modal{{this.id}}" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      確認要刪除<span class="text-info">{{this.name}}</span>?
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                      <button type="submit" class="btn btn-primary">確認</button>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </form>
+            </form>
+          </div>
         {{/each}}
       </div>
     </div>
