Get data from the database and switch to pure object before passing to the handlebars template and add underline to the id

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,6 +1,6 @@
 <h1 class="restaurant-show-title">餐廳表單填寫</h1>
 
-<form action="/restaurants/{{restaurant.id}}/edit" method="POST">
+<form action="/restaurants/{{{restaurant._id}}}/edit" method="POST">
   <div class="container">
       <div class="form-row">
         <div class="form-group col-md-6">
