Install method-override and match the restful routes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,7 +42,7 @@
             </div>
 
             <!-- Modal -->
-            <form action="/restaurants/{{{this._id}}}/delete" method="POST">
+            <form action="/restaurants/{{{this._id}}}/delete?_method=DELETE" method="POST">
               <div class="modal fade" id="modal{{{this._id}}}" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
