--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,16 +1,27 @@
 <!-- search bar -->
 <div class="container search-bar">
-  <div class="search-bar-outer">
-    <div class="search-bar-inner">
+  <div class="search-bar-outer row align-items-end">
+    <div class="search-bar-inner col-10">
       <form action="/search">
         <h4 class="mb-2">尋找餐廳：</h4>
         <div class="input-group">
-          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..." value="{{keyword}}" aria-describedby="search-button">
+          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
+            value="{{keyword}}" aria-describedby="search-button">
           <div class="input-group-append">
             <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
           </div>
         </div>
       </form>
+    </div>
+    <div class="dropdown col-2">
+      <button class="btn btn-major dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">排序</button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">A -> Z</a>
+        <a class="dropdown-item" href="#">Z -> A</a>
+        <a class="dropdown-item" href="#">類別</a>
+        <a class="dropdown-item" href="#">地區</a>
+      </div>
     </div>
   </div>
 </div>
@@ -21,48 +32,50 @@
     <div class="col-md-10 col-12 mx-auto">
       <div class="card-columns">
         {{#each restaurants}}
-          <div class="card mb-3">
-            <img class="card-img-top" src="{{{this.image}}}" alt="{{{this.name}}}">
-            <div class="card-body p-3">
-              <h6 class="card-title mb-1">{{{this.name}}}</h6>
+        <div class="card mb-3">
+          <img class="card-img-top" src="{{{this.image}}}" alt="{{{this.name}}}">
+          <div class="card-body p-3">
+            <h6 class="card-title mb-1">{{{this.name}}}</h6>
 
-              <div class="restaurant-category mb-1">
-                <i class="fas fa-utensils pr-2"></i> {{{this.category}}}
-              </div>
-
-              <span class="badge badge-pill badge-danger font-weight-normal">
-                {{{this.rating}}}
-                <i class="fas fa-star fa-xs"></i>
-              </span>
-            </div>
-            <div class="card-footer">
-              <a href="/restaurants/{{{this._id}}}/edit" class="btn btn-success">編輯餐廳</a>
-              <a href="/restaurants/{{{this._id}}}" class="btn btn-secondary">餐廳資訊</a>
-              <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal{{{this._id}}}">刪除</button>
+            <div class="restaurant-category mb-1">
+              <i class="fas fa-utensils pr-2"></i> {{{this.category}}}
             </div>
 
-            <!-- Modal -->
-            <form action="/restaurants/{{{this._id}}}/delete?_method=DELETE" method="POST">
-              <div class="modal fade" id="modal{{{this._id}}}" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                      </button>
-                    </div>
-                    <div class="modal-body">
-                      確認要刪除<span class="text-info">{{this.name}}</span>?
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                      <button type="submit" class="btn btn-primary">確認</button>
-                    </div>
+            <span class="badge badge-pill badge-danger font-weight-normal">
+              {{{this.rating}}}
+              <i class="fas fa-star fa-xs"></i>
+            </span>
+          </div>
+          <div class="card-footer">
+            <a href="/restaurants/{{{this._id}}}/edit" class="btn btn-success">編輯餐廳</a>
+            <a href="/restaurants/{{{this._id}}}" class="btn btn-secondary">餐廳資訊</a>
+            <button type="button" class="btn btn-danger" data-toggle="modal"
+              data-target="#modal{{{this._id}}}">刪除</button>
+          </div>
+
+          <!-- Modal -->
+          <form action="/restaurants/{{{this._id}}}/delete?_method=DELETE" method="POST">
+            <div class="modal fade" id="modal{{{this._id}}}" tabindex="-1" role="dialog" aria-labelledby="ModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    確認要刪除<span class="text-info">{{this.name}}</span>?
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                    <button type="submit" class="btn btn-primary">確認</button>
                   </div>
                 </div>
               </div>
-            </form>
-          </div>
+            </div>
+          </form>
+        </div>
         {{/each}}
       </div>
     </div>
