--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,5 @@
 <!-- search bar -->
+<div class="banner"></div>
 <div class="container search-bar">
   <div class="search-bar-outer row align-items-end">
     <div class="search-bar-inner col-10">
