--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,5 @@
 <!-- search bar -->
+{{#if isAuthenticated}}
 <div class="banner"></div>
 <div class="container search-bar">
   <div class="search-bar-outer row align-items-end">
@@ -78,3 +79,4 @@
     </div>
   </div>
 </div>
+{{/if}}
