--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,14 @@
             width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
           我的餐廳清單
         </a>
-        <a href="/restaurants/new" class="btn btn-outline-info">建立餐廳</a>
+        {{#if isAuthenticated}}
+        <div class="btn-group">
+          <a href="/users/logout" class="btn btn-outline-info">登出</a>
+          <a href="/restaurants/new" class="btn btn-outline-info">建立餐廳</a>
+        </div>
+        {{else}}
+        <a href="/users/login" class="btn btn-outline-info">登入</a>
+        {{/if}}
       </div>
     </nav>
 
