--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,7 +31,7 @@
   <div class="row">
     <div class="card-deck">
       {{#each restaurants}}
-      <div class="card mb-3" style="min-width: 20%;">
+      <div class="card mb-3 restaurant-card" style="min-width: 20%; max-width: 260px; padding: 0;">
         <img class="card-img-top" src="{{{this.image}}}" alt="{{{this.name}}}">
         <div class="card-body p-3">
           <h6 class="card-title mb-1">{{{this.name}}}</h6>
