--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
   <link rel="stylesheet" href="/stylesheets/index.css">
   <link rel="stylesheet" href="/stylesheets/show.css">
+  <link rel="stylesheet" href="/stylesheets/error.css">
 </head>
 
 <body>
@@ -32,8 +33,6 @@
         {{/if}}
       </div>
     </nav>
-
-    {{!-- <div class="banner"></div> --}}
   </header>
 
   {{!-- render partial template --}}
