--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,6 +3,7 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body">
       <h1 class="text-center mb-3">登入</h1>
+      {{> messages}}
       <form action="/users/login" method="POST">
         <div class="form-group">
           <label for="email">Email</label>
@@ -13,6 +14,7 @@
           <input type="password" id="password" name="password" class="form-control" placeholder="輸入密碼">
         </div>
         <button type="submit" class="btn btn-primary btn-block">登入</button>
+        <a href="/auth/facebook" class="btn btn-info btn-block">Facebook 登入</a>
       </form>
       <p class="lead mt-4">
         沒有帳號? <a href="/users/register">註冊</a>
